# web-template

./: .gitignore  .pre-commit-config.yaml  .sqlxrc  CLAUDE.md  CURRENT_ISSUES.md  CURRENT_TASKS.md  Dockerfile  Procfile  README.md  check_auth.js  docker-compose.yml  example.envrc  justfile  template.config.json
client/: .gitignore  .prettierignore  components.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
client/e2e/: auth-flow.test.ts  github-oauth.test.ts  i18n-validation.test.ts  language-switching.test.ts  ui-consistency.test.ts
client/src/: app.css  app.html
client/src/lib/: index.ts
client/src/lib/components/: LanguageSelector.svelte  Navigation.svelte  ThemeToggle.svelte
client/src/lib/guards/: authGuard.ts
client/src/lib/i18n/: README.md  index.ts  types.ts
client/src/lib/services/: aiClient.ts  apiAuth.ts  authFlowManager.ts  index.ts  paymentService.ts  storageService.ts
client/src/lib/stores/: authStore.ts  chatStore.ts  index.ts  locale.ts  theme.ts
client/src/lib/styles/: accessibility.css  design-tokens.json  themes.css  tokens.css
client/src/lib/types/: auth.ts  chat.ts  index.ts  payment.ts
client/src/lib/utils/: accessibility.ts  auth.ts  authRouter.ts  i18n.ts  index.ts  validation.ts
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
client/src/routes/chat/: +page.svelte  +page.ts
client/src/routes/login/: +page.svelte  +page.ts
client/src/routes/payment/: +page.svelte
db/: schema.sql
db/migrations/: 20250528023034_create_users_table.sql
deploy/systemd/: setup-systemd.sh  web-template.service
documentation/: ARCHITECTURE.md  CLIENT_STORAGE.md  CONTAINERISED_APPLICATION_OPTIONS.md  DEPLOYMENT.md  I18N_PROCESS.md  PRD.md  PRODUCTION_READY.md  SECURITY.md  TEMPLATE_USAGE.md  UI-UX_SPECIFICATION.md  UI_GUIDELINES.md  UI_UX_THEME.md
scripts/: build-production.sh  deploy-local.sh  docker-entrypoint.sh  run-docker.sh
scripts/create-web-template/: Cargo.toml
scripts/create-web-template/src/: cli.rs  config.rs  errors.rs  git.rs  main.rs  template.rs  update.rs  utils.rs  wizard.rs
scripts/create-web-template/tests/: integration_test.rs
server/: .tarpaulin.toml  Cargo.toml
server/db/: schema.sql
server/db/migrations/: 20250619000602_create_user_invites_table.sql  20250619002656_add_oauth_to_users.sql  20250619023937_seed_initial_invite.sql  20250623034952_create_ai_chat_tables.sql  20250623204551_create_oauth_state_table.sql  20250624022203_add_test_invites.sql  20250625004427_create_user_payments_table.sql  20250625004452_create_stripe_webhook_events_table.sql  20250626060500_fix_user_payments_datetime_format.sql  20250630152137_update_invite_expiry_dates.sql
server/migrations/: 20250702230731_create_users.up.sql  20250702230746_create_oauth_states.up.sql  20250702230758_create_ai_conversations.down.sql  20250702230758_create_ai_conversations.up.sql  20250702230811_create_ai_messages.up.sql  20250702230839_create_issues.up.sql  20250702230903_create_ai_usage.up.sql  20250702230921_create_user_invites.up.sql  20250702230937_seed_initial_invite.down.sql  20250702230937_seed_initial_invite.up.sql  20250702230991_create_user_payments_table.down.sql  20250702230991_create_user_payments_table.up.sql  20250702230992_create_stripe_webhook_events_table.up.sql  20250706001000_create_cli_devices.down.sql  20250706001000_create_cli_devices.up.sql  20250706001001_create_cli_auth_flows.down.sql  20250706001001_create_cli_auth_flows.up.sql  20250706001002_create_cli_refresh_tokens.down.sql  20250706001002_create_cli_refresh_tokens.up.sql  20250706001003_create_ai_sessions.down.sql  20250706001003_create_ai_sessions.up.sql
server/prompts/templates/chat/: code_analysis.hbs
server/src/: errors.rs  lib.rs  main.rs  routes.rs
server/src/ai/: README.md  error.rs  mod.rs  models.rs  prompt.rs  provider.rs  schema.rs
server/src/ai/functions/: definitions.rs  mod.rs
server/src/ai/models/: analysis.rs  chat.rs  mod.rs  responses.rs  usage.rs
server/src/ai/prompts/: mod.rs  renderer.rs
server/src/ai/prompts/templates/: mod.rs
server/src/ai/providers/: mod.rs  openrouter.rs  traits.rs
server/src/ai/services/: mod.rs  schema_validator.rs
server/src/config/: mod.rs  oauth.rs
server/src/core/: auth_utils.rs  mod.rs  password_utils.rs  state.rs
server/src/handlers/: ai_handler.rs  auth_handler.rs  health_handler.rs  mod.rs  oauth_handler.rs  payment_handler.rs  user_handler.rs
server/src/handlers/ai_handler/: chat.rs  conversations.rs  file_upload.rs  misc.rs  mod.rs  streaming.rs
server/src/handlers/oauth_handler/: mod.rs  tests.rs
server/src/middleware/: auth_middleware.rs  mod.rs  payment_middleware.rs
server/src/models/: ai_models.rs  ai_persona.rs  ai_session.rs  auth.rs  invite.rs  mod.rs  oauth.rs  payment.rs  user.rs
server/src/scheduler/: README.md  mod.rs
server/src/services/: ai_data_service.rs  ai_data_service_tests.rs  ai_service.rs  auth_service.rs  invite_service.rs  mod.rs  oauth_service.rs  user_service.rs
server/src/services/payment/: db_operations.rs  mod.rs  stripe_integration.rs  webhook_handlers.rs
server/src/services/payment/db_operations/: mod.rs  tests.rs
server/src/services/tests/: mod.rs  user_service_tests.rs
server/src/test_helpers/: mod.rs
server/templates/chat/: contextual_chat.hbs
server/tests/: README.md  ai_integration_tests.rs  auth_integration_tests.rs  endpoint_tests.rs  integration_tests.rs  oauth_integration_tests.rs
server/tests/common/: README.md  mod.rs  test_context.rs
server/tests/endpoint/: README.md  auth_tests.rs  mod.rs  payment_tests.rs  route_coverage_test.rs
server/tests/integration/: README.md  mod.rs  oauth_tests.rs
server/uploads/sessions/sess_3b9b3367-bbcc-4e5f-898b-0e9a856ba55f/: c512b46e-2539-474c-9f70-fe7048cf28ab_private.txt
server/uploads/sessions/sess_573e9194-5e9c-4423-9a9d-dad95172541a/: 6f78ad74-d1ab-4454-9260-05cf99c55583_metadata_test.txt
server/uploads/sessions/sess_758d53c3-1ce8-4387-a222-6905b257fd91/: bcae1114-4e91-4ed0-b38f-de3628d8d1a1_download_test.txt
(+36 files in other folders)
