[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
