[package]
name = "create-web-template"
version = "0.1.0"
edition = "2024"
authors = ["Web Template Contributors"]
description = "CLI tool for scaffolding new projects from the web-template"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tera = "1.20"
console = "0.15"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
regex = "1.10"
git2 = "0.19"
glob = "0.3"
which = "6.0"
directories = "5.0"

[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
# Elevate default Clippy warnings to errors.
# This will make sure `cargo clippy` fails on any warnings from these groups.
all = "deny"           # Denies all lints in the default `clippy::all` group (correctness, suspicious, complexity, perf, style).
pedantic = "warn"      # Denies all lints in `clippy::pedantic`. Be prepared for many `#[allow]`s.
# restriction = "warn"   # Denies all lints in `clippy::restriction`. Extremely strict, often requires many `#[allow]`s.
# cargo = "deny"         # Denies lints for `Cargo.toml` improvements.
